Closed
Bug 84677
Opened 24 years ago
Closed 24 years ago
Do default priority for patterns right
Categories
(Core :: XSLT, defect, P5)
Core
XSLT
Tracking
()
VERIFIED
FIXED
People
(Reporter: sicking, Assigned: sicking)
Details
Attachments
(3 files)
|
7.83 KB,
patch
|
Details | Diff | Splinter Review | |
|
11.87 KB,
patch
|
Details | Diff | Splinter Review | |
|
12.04 KB,
patch
|
Details | Diff | Splinter Review |
We do quite alot of extra work in ::getDefaultPriority since we match the node
against the pattern. Also some of the priorities are wrong. I'll attach a
temporary patch but we need to get bug 75102 in before I can make a real patch
| Assignee | ||
Comment 1•24 years ago
|
||
| Assignee | ||
Comment 2•24 years ago
|
||
| Assignee | ||
Comment 3•24 years ago
|
||
here goes...
Much of this patch is comment fixes wrt removal of patterns. The code changes
should be pretty straight forward.
I've left the |XXX::getDefaultPriority(...)| lines unchanged on purpose even
though most of them is more then 80 columns wide, the resaon is that i'm gonna
remove the |Node* context| argument soon since it's not used which will make
the lines short enough (in that patch i'm gonna move down the {s aswell).
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•24 years ago
|
||
it would really be nice if we could get this on the branch as we currently
don't support even support priorities (see fix of ProcessorState::findTemplate)
Updated•24 years ago
|
Priority: -- → P5
Comment 5•24 years ago
|
||
Attribute- and ElementExpr: newlines in early returns
FilterExpr: assertion, Filter is not allowed in Patterns.
if( -> if (
r=axel if you done that.
Axel
| Assignee | ||
Comment 6•24 years ago
|
||
Comment 7•24 years ago
|
||
sr=shaver
| Assignee | ||
Comment 8•24 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•