Fix default-priorities for patterns and priorities for templates. b=84677 r=Pike sr=shaver