content/xslt/src/xpath/txPathExpr.cpp
@@ -183,24 +183,16 @@ void PathExpr::evalDescendants (Expr* expr, Node* context,
 /**
  * Returns the default priority of this Pattern based on the given Node,
  * context Node, and ContextState.
- * If this pattern does not match the given Node under the current context Node and
- * ContextState then Negative Infinity is returned.
 **/
 double PathExpr::getDefaultPriority(Node* node, Node* context,
                                     ContextState* cs)
 {
-    if (matches(node, context, cs)) {
-        int size = expressions.getLength();
-        if (size == 1) {
-            ListIterator* iter = expressions.iterator();
-            PathExprItem* pxi = (PathExprItem*)iter->next();
-            delete iter;
-            return pxi->expr->getDefaultPriority(node, context, cs);
-        }
-        else if (size > 1) 
-            return 0.5;
-    }
-    return Double::NEGATIVE_INFINITY;
+    int size = expressions.getLength();
+    if (size > 1 || isAbsolute())
+        return 0.5;
+
+    return ((PathExprItem*)expressions.get(0))->
+        expr->getDefaultPriority(node, context, cs);
 } //-- getDefaultPriority
 
 /**
