extensions/transformiix/source/xpath/ElementExpr.cpp
@@ -80,12 +80,13 @@ ExprResult* ElementExpr::evaluate(Node* context, ContextState* cs) {
 /**
  * Returns the default priority of this Pattern based on the given Node,
  * context Node, and ContextState.
- * If this pattern does not match the given Node under the current context Node and
- * ContextState then Negative Infinity is returned.
 **/
 double ElementExpr::getDefaultPriority(Node* node, Node* context, ContextState* cs) {
-    if (isNameWild) return -0.5;
-    return 0.0;
+    if (!isNameWild)
+        return 0;
+    if (!isNamespaceWild)
+        return -0.25;
+    return -0.5;
 } //-- getDefaultPriority
 
   //-----------------------------/
